--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android Kotlin Debugging</string>
+    <string name="app_name">Debugging Application</string>
 
     <string name="hello_world">Hello World</string>
     <string name="sum_of_two_numbers">2 + 2</string>
